 /**
 * Copyright 2006-2018. California Institute of Technology.
 * ALL RIGHTS RESERVED.
 * U.S. Government sponsorship acknowledged.
 *
 * This software is subject to U. S. export control laws and
 * regulations (22 C.F.R. 120-130 and 15 C.F.R. 730-774). To the
 * extent that the software is subject to U.S. export control laws
 * and regulations, the recipient has the responsibility to obtain
 * export licenses or other export authority as may be required
 * before exporting such information to foreign countries or
 * providing access to foreign nationals.
 */
 /**
 * AMPCS common protobuf schema for Alarmed EHA Channel messages.
 *
 * Version: 1.0
 * ChangeLog:
 * V1.0 - New for R8
 */
syntax = "proto3";

package eha;

import "abstract_message.proto";
import "primitives/time_primitives.proto";
import "primitives/eha_primitives.proto";
import "primitives/alarm_primitives.proto";
import "alarm_value_set.proto";

option optimize_for = SPEED;
option java_multiple_files = true;
option java_package = "jpl.gds.eha.api.channel.serialization";
option java_outer_classname = "ProtoBufAlarmedChannelValueSerialization";

message Proto3AlarmedChannelValueMessage {
	messages.Proto3AbstractMessage super = 1;
	Proto3ChannelValue chanVal = 2;
	oneof hasStreamId { string streamId = 3; }
}

/**
 * Creating a collection of service channel values.
 */
message Proto3ServiceCollection {
	repeated Proto3ChannelValue  channels = 1;
}

/**
 * Channel value holds the actual alarm value set.
 * Categories are as string for performance reasons
 */
message Proto3ChannelValue {
	string title = 1;
	string channelId = 2;
	Proto3ChanDefType chanDefType = 3;
	Proto3Dn dn = 4;
	oneof hasAlarms { Proto3AlarmValueSet alarms = 5; }
	oneof hasEu { double eu = 6; }
	int32 dssId = 7;
	oneof hasVcid { int32 vcid = 8; }
	bool isRealtime = 9;
	oneof hasErt { Proto3Adt ert = 10; }
	oneof hasRct { Proto3Adt rct = 11; }
	oneof hasLst { Proto3Lst lst = 12; }
	oneof hasScet { Proto3Adt scet = 13; }
	oneof hasSclk { Proto3Sclk sclk = 14; }
	oneof hasStatus { string status = 15; }
	string dnUnits = 16;
	string euUnits = 17;
	string subsystem = 18;
	string opsCat = 19;
	string module = 20;
}
